Fix contrast accessibility issues

--- a/src/scss/abstracts/_themes.scss
+++ b/src/scss/abstracts/_themes.scss
@@ -4,11 +4,11 @@ $themes: (
   light: (
     background: #e5e7eb,
     text-main: #030712,
-    text-inactive: #6b7280,
+    text-inactive: #4b5563,
     text-label: #6b7280,
     card: #f9fafb,
     card-inactive: #d1d5db,
-    card-counter-inactive: #6b7280,
+    card-counter-inactive: #4b5563,
     card-counter-text-inactive: #d1d5db,
     input: #d1d5db,
     input-photo: #6b7280,
@@ -19,12 +19,12 @@ $themes: (
   dark: (
     background: #111827,
     text-main: #f9fafb,
-    text-inactive: #6b7280,
+    text-inactive: #9ca3af,
     text-label: #d1d5db,
     card: #374151,
     card-inactive: #1f2937,
     card-counter-inactive: #374151,
-    card-counter-text-inactive: #6b7280,
+    card-counter-text-inactive: #9ca3af,
     input: #4b5563,
     input-photo: #9ca3af,
     btn-neutral: #6b7280,
