--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -35,7 +35,7 @@
     }
 
     &-positive {
-      background-color: #10b981;
+      background-color: #059669;
     }
 
     &-negative {
