--- a/src/scss/components/_preview.scss
+++ b/src/scss/components/_preview.scss
@@ -51,7 +51,7 @@
   }
 
   &-description {
-    color: #868e96;
+    color: #6b7280;
   }
 
   &-hr {
